--- a/Changelog
+++ b/Changelog
@@ -1,2 +1,4 @@
 Version 1.0
 First release, an updated from the previous version of the MW2 tool with new features and a better and simplified user interface.
+Errors: The Admin Mode doesn't work all the time
+Turning off Riot Shields puts a Riot Shield on everyones back. Will fix soon
