--- a/Changelog
+++ b/Changelog
@@ -7,3 +7,5 @@ Fixed Countdown force host when being in an alone party
 Version 1.2
 Added refill stuns/flashes when you press your refill ammo key.
 Made it so everyone else don't have grenades/semtexes/claymores etc...
+Version 1.3
+Fixed health and viewkick problem. By the way, Celeste is a prick.
