--- a/Changelog
+++ b/Changelog
@@ -9,3 +9,5 @@ Added refill stuns/flashes when you press your refill ammo key.
 Made it so everyone else don't have grenades/semtexes/claymores etc...
 Version 1.3
 Fixed health and viewkick problem. By the way, Celeste is a prick.
+Version 1.4
+Removed Grenade/Semtexes/Claymores function temporarily until I fix it as it currently sometimes makes you lose your own equipment.
