--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,6 @@
+Please report bugs here: https://github.com/josh155/MW2-Force-Host/issues
 Version 1.0
 First release, an updated from the previous version of the MW2 tool with new features and a better and simplified user interface.
-Please report other bugs here: https://github.com/josh155/MW2-Force-Host/issues
 Version 1.1
 Temporarily disabled the option for Riotshields.
 Fixed Countdown force host when being in an alone party
