--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,5 @@
 Please report bugs here: https://github.com/josh155/MW2-Force-Host/issues
+DON'T LOAD OLD INI FILES IF YOU HAVE UPDATED FROM VERSION 1.5 AND BELOW
 Current Bugs:
 Blood doesn't show until you're below the chosen player health.
 Occasionally your hud (mainly XP Bar) will mess up.
