--- a/Changelog
+++ b/Changelog
@@ -12,7 +12,7 @@ Version 1.2
 Added refill stuns/flashes when you press your refill ammo key.
 Made it so everyone else don't have grenades/semtexes/claymores etc...
 Version 1.3
-Fixed health and viewkick problem. By the way, Celeste is a prick.
+Fixed health and viewkick problem.
 Version 1.4
 Removed Grenade/Semtexes/Claymores function temporarily until I fix it as it currently sometimes makes you lose your own equipment.
 Version 1.5
@@ -22,3 +22,5 @@ Added a kick tool.
 Version 1.6
 Changed how health works.
 Fixed crashing when Github is down.
+Version 1.7
+Fixed Free For All teams for non Free For All playlists.
